// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button header Should be collapsed 1`] = `
<button
  className="button button_theme-default button_dropdown-header class-name-example collapsed"
  disabled={false}
  onClick={undefined}
  title="Some text"
>
  <div
    className="button-content"
  >
    <span
      className="button-label butten-content__label"
    >
      Some text
    </span>
  </div>
</button>
`;

exports[`Button header Should be expanded 1`] = `
<button
  className="button button_theme-primary button_dropdown-header class-name-example expanded"
  disabled={false}
  onClick={undefined}
  title="Some text"
>
  <div
    className="button-content"
  >
    <span
      className="button-label butten-content__label"
    >
      Some text
    </span>
  </div>
</button>
`;
